# Worksheet-Generator

./: README.md  api.py  app.py  pyproject.toml  report.md  requirements.txt
src/worksheet_generator/: crew.py  main.py
src/worksheet_generator/config/: agents.yaml  tasks.yaml
src/worksheet_generator/tools/: custom_tool.py
