[project]
name = "worksheet_generator"
version = "0.1.0"
description = "worksheet-generator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.134.0,<1.0.0",
    "pysqlite3-binary == 0.5.4",
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "fpdf2>=2.7.0",
    "pydantic>=2.0.0",
    "tenacity>=8.0.0",
    "pyyaml>=6.0"
]

[project.scripts]
worksheet_generator = "worksheet_generator.main:run"
run_crew = "worksheet_generator.main:run"
train = "worksheet_generator.main:train"
replay = "worksheet_generator.main:replay"
test = "worksheet_generator.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
